--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,6 @@ jobs:
     defaults:
       run:
         working-directory: code
-
     steps:
       - uses: actions/checkout@v4
 
@@ -39,3 +38,29 @@ jobs:
 
       - name: Run tests in all packages (if present)
         run: pnpm -r --workspace-concurrency=1 --if-present run test:ci
+
+  osv_scan:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: code
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+
+      - name: Install (no scripts, no frozen lockfile)
+        run: pnpm install --ignore-scripts --no-frozen-lockfile
+
+      - name: OSV scan
+        uses: google/osv-scanner-action@v1
+        with:
+          scan-args: ". --lockfile=pnpm-lock.yaml"
